Fix word-wrap of hero feature text

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -44,11 +44,11 @@
   flex-direction: row;
   justify-content: space-around;
   text-align: center;
-  word-wrap: break-word;
 }
 
 .hero-feature-content p {
   max-width: 20vw;
+  font-size: 1.5em;
 }
 
 .hero-example-bg {
